cmake_minimum_required (VERSION 2.8)
project(backup)
include_directories(${backup_SOURCE_DIR}/src)
add_subdirectory(src)
add_subdirectory(test)
# find_package(Boost 1.46.1 COMPONENTS unit_test_framework date_time)
# include_directories(${Boost_INCLUDE_DIRS})
# link_directories(${Boost_LIBRARY_DIRS})
add_executable(backup main.cpp)
