cmake_minimum_required (VERSION 2.8)
project(my_backup)
include_directories(${backup_SOURCE_DIR}/src)
add_subdirectory(src)
add_subdirectory(test)
find_package(Boost 1.46.1 COMPONENTS filesystem program_options system)
include_directories(${Boost_INCLUDE_DIRS})
link_directories(${Boost_LIBRARY_DIRS})
add_executable(main main.cpp)
target_link_libraries(main ${Boost_LIBRARIES} backup)

