find_package(Boost 1.46.1 COMPONENTS unit_test_framework date_time filesystem system)
include_directories(${Boost_INCLUDE_DIRS})
link_directories(${Boost_LIBRARY_DIRS})
include_directories(${backup_SOURCE_DIR}/src)
add_executable(backup_object_test backup_object_test.cpp)
target_link_libraries(backup_object_test ${Boost_LIBRARIES} libbackup)
add_executable(local_object_test local_object_test.cpp)
target_link_libraries(local_object_test ${Boost_LIBRARIES} libbackup)
add_executable(remote_store_test remote_store_test.cpp)
target_link_libraries(remote_store_test ${Boost_LIBRARIES} libbackup)
add_executable(s3_store_test s3_store_test.cpp)
target_link_libraries(s3_store_test ${Boost_LIBRARIES} libbackup)
